# CitySprint

./: .gitignore  CMakeLists.txt  JSON.txt  README.md  codingStandards.md
CitySprint/: CMakeLists.txt  game_server.cpp  logger.cpp  logger.h  misc_lib.cpp  misc_lib.h  utilities.cpp  utilities.h
CitySprint/backups/: .backup.game_server.cpp  functionalCircle.txt
CitySprint/client/src/style/: game.css
CitySprintHTTPServer/: CMakeLists.txt  main.cpp  server.cpp  server.h
CitySprintHTTPServer/templates/: citysprint.html
CitySprintHTTPServer/templates/src/js/: app.js  citysprint.js
CitySprintHTTPServer/templates/src/style/: style.css
CitySprintServer/: CMakeLists.txt  server.cpp
CitySprintServer/templates/: citysprint.html  game_of_life.html  index.html  mandelbrot.html  sideViewGameTest.html  test.html
CitySprintServer/templates/src/js/: citysprint.js
CitySprintServer/templates/src/style/: citysprint.css  style.css
docs/: CodingPractices.md  CodingStandards.md
include/: misc_lib.h
